# pkg/openapi3/task_types.gen.go
@@ -1,8 +1,0 @@
-// Package openapi3 provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
-package openapi3
-
-const (
-	BearerAuthScopes = "bearerAuth.Scopes"
-)
